--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bot Saludador</title>
+  </head>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+    <h1>Bot Saludador</h1>
+    <form id="saludar-form">
+      <input type="submit" value="Saludar" id="saludar-button" />
     </form>
     <div id="resultado-div"></div>
 
