bot hola nombre genero

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <form id="saludar-form">
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" placeholder="Introduce tu nombre" />
+      <label for="genero">Género:</label>
+      <select id="genero">
+        <option value="">Seleccione un género</option>
+        <option value="masculino">Masculino</option>
+        <option value="femenino">Femenino</option>
+        <option value="no-binario">No Binario</option>
+      </select>
       <input type="submit" value="Saludar" id="saludar-button" />
     </form>
     <div id="resultado-div"></div>
