--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <option value="femenino">Femenino</option>
         <option value="no-binario">No Binario</option>
       </select>
+      <label for="edad">Edad:</label>
+      <input type="number" id="edad" placeholder="Introduce tu edad" min="0" />
       <input type="submit" value="Saludar" id="saludar-button" />
     </form>
     <div id="resultado-div"></div>
