bot hola nombre genero edad idioma

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       </select>
       <label for="edad">Edad:</label>
       <input type="number" id="edad" placeholder="Introduce tu edad" min="0" />
+      <label for="idioma">Idioma:</label>
+      <select id="idioma">
+        <option value="espanol">Español</option>
+        <option value="ingles">Inglés</option>
+      </select>
       <input type="submit" value="Saludar" id="saludar-button" />
     </form>
     <div id="resultado-div"></div>
